--- a/config.yaml
+++ b/config.yaml
@@ -9,6 +9,7 @@ fasta:
 mzml:
     location: "ftp.peptideatlas.org/distro/mzML"
 
+
 search_engines:
     - "msgfplus"
     - "xtandem"
@@ -21,6 +22,7 @@ lc:
 precursor:
     tolerance: '20'
     units: 'ppm'
+    threshold: '100'
 
 fragment:
     tolerance: '20'
