--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+*/.ipynb_checkpoints/*
+.ipynb_checkpoints
 ._Snakefile.py
 ftp.peptideatlas.org/
 .snakemake/
@@ -9,4 +11,3 @@ logs/
 csv/
 *.out
 benchmarks.txt
-
